# crews

./: .gitignore  README.md
blog_writer/: main.py
company_research/: .gitignore  README.md  main.py  pyproject.toml
company_research/src/company_research/: crew.py  main.py
company_research/src/company_research/config/: agents.yaml
customer_outreach/: main.py
customer_support/: main.py
financial_analysis/: main.py
tavily_tool_demo/: README.md  pyproject.toml
tavily_tool_demo/src/tavily_tool_demo/: crew.py  main.py
tavily_tool_demo/src/tavily_tool_demo/config/: agents.yaml  tasks.yaml
tavily_tool_demo/src/tavily_tool_demo/tools/: tavily_search.py
trip_planner/: agents.py  main.py  tasks.py  tools.py
write_article/: main.py
